--- a/vignettes/session-1.Rmd
+++ b/vignettes/session-1.Rmd
@@ -20,7 +20,7 @@ library(edcpR)
 
 See the slides for this session [here](https://htmlpreview.github.io/?https://github.com/wardfont/edcpR/blob/master/course-slides/session-1/session-1-slides.html)
 
-[doc](`r paste0('file:///',file.path(find.package('edcpR'),'course-slides','session-1,'session-1-slides.html'))`)
+[doc](`r paste0('file:///',file.path(find.package('edcpR'),'course-slides','session-1','session-1-slides.html'))`)
 
 
 In this session, you can explore the possibilities of R:
