--- a/vignettes/session-1.Rmd
+++ b/vignettes/session-1.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(edcp)
 ```
 
 See the slides for this session [here](https://htmlpreview.github.io/?https://github.com/wardfont/edcpR/blob/master/course/session-1/knitted/session-1-document.html)
