--- a/vignettes/session-1.Rmd
+++ b/vignettes/session-1.Rmd
@@ -12,7 +12,10 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-library(edcp)
+```
+
+```{r, echo = F}
+library(edcpR)
 ```
 
 See the slides for this session [here](https://htmlpreview.github.io/?https://github.com/wardfont/edcpR/blob/master/course/session-1/knitted/session-1-document.html)
