--- a/vignettes/assignment-1.Rmd
+++ b/vignettes/assignment-1.Rmd
@@ -26,7 +26,7 @@ Remember:
 - You will be graded on:
   - The **correctness** of your answers.
   - The **efficiency** of your code. Don't make your script unnecessarily long and only do the essential steps.
-  - The **clarity** of your code. Make sure you explain the steps in your script with annotations (`#`). Without comments we don't know if you understand what is happening.
+  - The **clarity** of your code. Make sure you explain the steps in your script with annotations (`#`). Without comments, we don't know if you understand what is happening.
 
 ## Data
 
@@ -39,8 +39,6 @@ data(vegdata1, vegdata2,  package = "edcpR")
 ## Part 1
 
 Extract the following values from the *vegdata1* dataset:
-
-Make sure 
 
 - Store the column with name *Elevation* in a vector called **my_vector**.
 - Store the number in the *18th* row and *6th* column in an object called **my_number**.
