--- a/course/session-3/session-3-slides.Rmd
+++ b/course/session-3/session-3-slides.Rmd
@@ -77,8 +77,8 @@ It can convert different formats as long as you give it the correct information:
 
 ## Numeric date formats
 
-```{r echo=, message=FALSE, warning=FALSE}
-# Convert them using appropriate origin
+```{r echo=T, message=FALSE, warning=FALSE}
+# Under the hood, R stores the dates as numeric values, but with origin "1970-01-01"
 format_1 <- as.Date(as.numeric(dates), origin = "1899-12-30")
 format_1[101:128]
 ```
