--- a/course/session-4/EDCP-Presentation-Session-4.Rmd
+++ b/course/session-4/EDCP-Presentation-Session-4.Rmd
@@ -53,9 +53,9 @@ Common beech (Fagus sylvatica) is increasing in Forêt de Compiegne (N. France) 
 
 *Research question: Does Fagus sylvatica (common beech) have an effect on the understory cover in temperate forests?*
 
-Use the Compiegne datasets. The Understory cover is the sum of all species individual.
+Use the Compiegne datasets. The Understory cover is the sum of all species individuals:
 
-```{r, echo = T, eval=F}
+```{r, echo = T}
 library(edcpR)
 data(Compiegne_env, Compiegne_sp, package = "edcpR")
 ```
@@ -115,7 +115,7 @@ We want to study the relationship between different soil variables to gain more 
 
 *Research question: Is there a relationship between soil Ca content and soil pH?*
 
-Use the varechem dataset.
+Use the varechem dataset:
 
 ```{r, echo = T}
 library(vegan)
@@ -187,13 +187,15 @@ Using the dune_spec dataset:
 
 *Research question: Is the species composition of a haypasture dune grassland closer to a hayfield dune grassland or to pasture dune grassland?*
 
+```{r}
+data(dune_spec, package = "edcpR")
+```
+
 ## Solution Question 3
 
 ```{r, echo = T}
-dunespec <- read.csv("./data/dune_spec.csv", header = TRUE, sep = ";")
-
-vegdist(dunespec[,-1],method = "bray")
-vegdist(dunespec[,2:31],method = "bray")
+vegdist(dune_spec[,-1],method = "bray")
+vegdist(dune_spec[,2:31],method = "bray")
 ```
 
 ## Question 4 (15 min)
@@ -202,29 +204,27 @@ Using the varechem dataset:
 
 *Research question: How do the soil conditions compare between the plots?*
 
-## Solution Question 4 (1)
-
 ```{r}
-varechem <- read.csv("./data/varechem.csv", header = TRUE, sep = ";")
+data(varechem, package = "vegan")
 ```
 
+## Solution Question 4 (1)
 
 ```{r, echo = T}
 
-# Baresoil, Managmenttype & Use are no Soil conditions, so they can just be deleted from the data frame
-varechem <- varechem[, -c(13, 16, 17)]
+# Baresoil, is not a soil condition, so it can just be deleted from the data frame
+varechem <- varechem %>% select(-Baresoil)
 head(varechem)
 
 # Standardize variables
-varechem <- as.data.frame(scale(varechem[, 2:14]))
-
+varechem_scale <- as.data.frame(scale(varechem))
 ```
 
 ## Solution Question 4 (1)
 
 ```{r, echo = T}
 # Euclidian distance
-euclidean <- vegdist(varechem, method = "euclidean")
+euclidean <- vegdist(varechem_scale, method = "euclidean")
 euclidean <- scores(euclidean)
 
 # Some possible conclusions...
@@ -236,4 +236,4 @@ which(euclidean == max(euclidean), arr.ind=TRUE)
 
 **NO** Assignment this week.
 
-**Next week** assignment on this and next exercise session.
+**Next week** assignment on this and the next exercise session.
